# cyber_industrial

./: .envrc  .gitignore  README.md  package-lock.json  pyproject.toml  rxconfig.py  todo.md
assets/styles/: matrix.css
cyber_industrial/: cyber_industrial.py
cyber_industrial/components/: ai_brain_comp.py  ai_brain_spline.py  particle_component.py  particles_bg.py  purp_wave_comp.py  purp_wave_spline.py  wave_lit_comp.py  wave_lit_spline.py  wavespline.py
cyber_industrial/database/data/: particle_component.py
cyber_industrial/layout/: bg_layout_aibrain.py  bg_layout_wavegrid.py  bg_layout_waveroll.py
cyber_industrial/page/: analytics.py  databasemods.py  datfileupdate.py  home.py  imagecollection.py  index.py  logcollection.py  login.py  signup.py
