[project]
name = "cyber-industrial"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.5",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psutil>=7.0.0",
    "reflex==0.8.0",
    "reflex-ag-grid>=0.0.11",
    "reflex-altair>=0.1.1",
    "reflex-animated-cursor>=0.0.1",
    "reflex-audio-capture>=0.1.0",
    "reflex-calendar>=0.0.6",
    "reflex-chakra>=0.7.0",
    "reflex-chat>=0.0.1",
    "reflex-clerk>=1.0.3",
    "reflex-color-picker>=0.0.1",
    "reflex-d3-graph>=0.0.1",
    "reflex-dynoselect>=0.1.0",
    "reflex-echarts>=0.1.0",
    "reflex-giscus>=0.1.0",
    "reflex-github-badge>=0.0.3",
    "reflex-google-auth>=0.0.8",
    "reflex-google-recaptcha-v2>=0.1.0",
    "reflex-image-zoom>=0.0.2",
    "reflex-intersection-observer>=0.0.8",
    "reflex-local-auth>=0.2.2",
    "reflex-lottiefiles>=0.0.2",
    "reflex-magic-link-auth>=0.0.4",
    "reflex-map>=0.2.3",
    "reflex-monaco>=0.0.3",
    "reflex-motion>=0.0.1",
    "reflex-nav-menu>=0.0.1",
    "reflex-pyplot>=0.2.0",
    "reflex-qrcode>=0.0.1",
    "reflex-resizable-panels>=0.0.1",
    "reflex-simple-password>=0.0.1",
    "reflex-simpleicons>=0.0.6",
    "reflex-spline>=0.0.1",
    "reflex-text-loop>=0.0.1",
    "reflex-type-animation>=0.0.1",
    "reflex-webcam>=0.0.6",
    "reflex-wordcloud>=0.0.4",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
]
